--- a/src/style/Card.module.css
+++ b/src/style/Card.module.css
@@ -1,17 +1,18 @@
 .container {
-  max-width: 260pt;
+  max-width: 22rem;
+  min-height: 22rem;
   flex-direction: column;
   display: flex;
-  min-height: 260pt;
   background: #fff;
   border: 1px solid rgba(0,0,0,.2);
   border-radius: 10px;
 }
 
 .thumbnail {
-  min-width: 100%;
-  min-height: 146pt;
-  max-height: 146pt;
+  width: 100%;
+  height: 12.533rem;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .content {
