--- a/src/style/Card.module.css
+++ b/src/style/Card.module.css
@@ -5,12 +5,18 @@
   display: flex;
   background: #fff;
   border: 1px solid rgba(0,0,0,.2);
+}
+
+.borderRadiusContainer {
   border-radius: 10px;
 }
 
 .thumbnail {
   width: 100%;
   height: 12.533rem;
+}
+
+.borderRadiusThumbnail {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
