--- a/src/style/index.css
+++ b/src/style/index.css
@@ -8,6 +8,10 @@ body {
   font-size: 10px;
 }
 
+*, h1, h2, h3, h4, h5, h6, p, span {
+  font-family: Roboto, sans-serif;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
