--- a/src/style/Card.module.css
+++ b/src/style/Card.module.css
@@ -26,10 +26,20 @@
 }
 
 .title, .description {
-  font-size: 1.6rem;
+  font-size: 1rem;
   color: #53565b
 }
 
 .title {
   font-weight: 700;
+}
+
+.description {
+  text-align: initial;
+  max-height: 44%;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  overflow: hidden;
 }
