--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,8 +1,6 @@
-body {
+body, div, span {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 10px;
@@ -10,6 +8,10 @@ body {
 
 *, a, h1, h2, h3, h4, h5, h6, p, span {
   font-family: Roboto, sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
 
 code {
