--- a/src/style/Card.module.css
+++ b/src/style/Card.module.css
@@ -9,6 +9,9 @@
   display: flex;
   background: #fff;
   border: 1px solid rgba(0,0,0,.2);
+  font-size: 10px;
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
 }
 
 .borderRadiusContainer {
