--- a/src/style/Card.module.css
+++ b/src/style/Card.module.css
@@ -1,9 +1,9 @@
 .container {
   width: min-content;
-  height: min-content;
-  min-width: 20rem;
+  height: 100%;
+  min-width: 18rem;
   max-width: 22rem;
-  min-height: 20rem;
+  min-height: 18rem;
   max-height: 23rem;
   flex-direction: column;
   display: flex;
@@ -20,7 +20,9 @@
 
 .thumbnail {
   width: 100%;
-  height: 12.533rem;
+  height: 9.533rem;
+  min-height: 9.533rem;
+  max-height: 12.533rem;
 }
 
 .borderRadiusThumbnail {
@@ -39,6 +41,11 @@
 
 .title {
   font-weight: 700;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  overflow: hidden;
 }
 
 .description {
