--- a/src/style/Carousel.module.css
+++ b/src/style/Carousel.module.css
@@ -4,12 +4,12 @@
 
 .container {
   width: 100%;
-  height: 18.3rem;
+  height: 100%;
   min-height: 18.3rem;
   max-height: 26rem;
   display: block;
   background: none;
-  overflow: hidden;
+  overflow-x: hidden;
   padding-bottom: 0.2rem
 }
 
