--- a/src/style/List.module.css
+++ b/src/style/List.module.css
@@ -3,10 +3,8 @@
 }
 
 .container {
-  width: 30rem;
+  width: 100%;
   height: 100%;
-  min-width: 30rem;
-  max-width: 40rem;
   display: block;
   background: none;
   padding-bottom: 0.2rem
