--- a/src/style/RectangularCard.module.css
+++ b/src/style/RectangularCard.module.css
@@ -1,16 +1,14 @@
 .container {
-  width: 30rem;
-  height: 100%;
-  min-width: 30rem;
-  max-width: 40rem;
-  min-height: 12rem;
-  max-height: 23rem;
+  width: 100%;
+  height: 17rem;
+  min-height: 10rem;
   display: flex;
   background: #fff;
   border: 1px solid rgba(0,0,0,.2);
   font-size: 10px;
   font-family: 'Roboto', sans-serif;
   margin: 0;
+  gap: 1rem;
 }
 
 .borderRadiusContainer {
@@ -18,10 +16,11 @@
 }
 
 .thumbnail {
-  width: 12.533rem;
+  width: 17rem;
   height: 100%;
-  min-height: 9.533rem;
-  max-height: 12.533rem;
+  min-height: 5rem;
+  min-width: 5rem;
+  aspect-ratio: 1/1;
 }
 
 .borderRadiusThumbnail {
@@ -31,6 +30,17 @@
 
 .content {
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 0.8rem;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 0rem;
 }
 
 .title, .description, .date, .tags {
@@ -39,6 +49,7 @@
 }
 
 .title {
+  font-size: 2rem;
   font-weight: 700;
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
@@ -48,6 +59,7 @@
 }
 
 .description {
+  font-size: 1.2rem;
   text-align: initial;
   max-height: 44%;
   text-overflow: ellipsis;
@@ -64,4 +76,114 @@
 .tags {
   word-spacing: 0.5rem;
   line-height: 1.3rem;
+}
+
+@media (max-width: 890px) {
+  .title {
+    font-size: 1.5rem;
+  }
+  .description {
+    font-size: 1rem;
+  }
+  .thumbnail {
+    width: 14rem;
+    height: 100%;
+  }
+  .content {
+    gap: 0.5rem;
+    height: 14rem;
+  }
+}
+
+@media (max-width: 762px) {
+  .title {
+    font-size: 1.4rem;
+  }
+  .content {
+    gap: 0rem
+  }
+}
+
+
+@media (max-width: 700px) {
+  .title {
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 675px) {
+  .title {
+    font-size: 1.2rem;
+  }
+  .container {
+    gap: 0.2rem
+  }
+}
+
+@media (max-width: 620px) {
+  .title {
+    font-size: 1.1rem;
+  }
+  .description {
+    font-size: 0.8rem;
+  }
+  .container {
+    gap: 0rem
+  }
+}
+
+@media (max-width: 586px) {
+  .title {
+    font-size: 1rem;
+    font-weight: 600;
+  }
+  .description {
+    font-size: 0.8rem;
+  }
+  .thumbnail {
+    width: 13rem;
+  }
+  .content {
+    gap: 0rem;
+  }
+  .container {
+    gap: 0rem;
+    height: 13rem;
+  }
+}
+
+@media (max-width: 526px) {
+  .title {
+    font-size: 1rem;
+    font-weight: 600;
+  }
+  .description {
+    font-size: 0.8rem;
+  }
+  .thumbnail {
+    width: 100%;
+    height: 17rem;
+  }
+  .container {
+    flex-direction: column;
+    height: 28rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .title {
+    font-size: 1rem;
+    font-weight: 600;
+  }
+  .description {
+    font-size: 0.8rem;
+  }
+  .thumbnail {
+    width: 100%;
+    height: 14rem;
+  }
+  .container {
+    flex-direction: column;
+    height: 26rem;
+  }
 }
