--- a/src/style/Carousel.module.css
+++ b/src/style/Carousel.module.css
@@ -1,3 +1,7 @@
+:global(*) {
+  font-size: 10px;
+}
+
 :global(a) {
   text-decoration: none;
 }
@@ -5,8 +9,8 @@
 .container {
   width: 100%;
   height: 100%;
-  min-height: 18.3rem;
-  max-height: 26rem;
+  min-height: 25rem;
+  max-height: 40rem;
   display: block;
   background: none;
   overflow-x: hidden;
@@ -21,8 +25,8 @@
 }
 
 .carouselButton {
-  width: 2.4rem;
-  height: 2.4rem;
+  width: 4.0rem;
+  height: 4.0rem;
   border-radius: 100%;
   display: flex;
   justify-content: center;
@@ -37,13 +41,13 @@
 .previousButton {
   margin-left: 0.5%;
   float: left;
-  top: 8.4rem;
+  top: 11.4rem;
 }
 
 .nextButton {
   float: right;
   right: 1rem;
-  top: -9.7rem;
+  top: -13.7rem;
 }
 
 .iconButton > :local(polyline) {
