--- a/src/style/RectangularCard.module.css
+++ b/src/style/RectangularCard.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
-  height: 17rem;
-  min-height: 10rem;
+  height: max-content;
+  min-height: 19rem;
   display: flex;
   background: #fff;
   border: 1px solid rgba(0,0,0,.2);
@@ -16,7 +16,7 @@
 }
 
 .thumbnail {
-  width: 17rem;
+  width: 19rem;
   height: 100%;
   min-height: 5rem;
   min-width: 5rem;
@@ -32,8 +32,10 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 0.8rem;
+  height: max-content;
+  max-height: 40rem;
 }
 
 .details {
@@ -44,22 +46,21 @@
 }
 
 .title, .description, .date, .tags {
-  font-size: 1rem;
+  font-size: 1.6rem;
   color: #53565b
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 2.6rem;
   font-weight: 700;
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   display: -webkit-box;
-  overflow: hidden;
 }
 
 .description {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   text-align: initial;
   max-height: 44%;
   text-overflow: ellipsis;
@@ -70,7 +71,7 @@
 }
 
 .date, .tags {
-  font-size: 0.8rem;
+  font-size: 1.2rem;
 }
 
 .tags {
@@ -80,13 +81,13 @@
 
 @media (max-width: 890px) {
   .title {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
   }
   .description {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
   .thumbnail {
-    width: 14rem;
+    width: 18rem;
     height: 100%;
   }
   .content {
@@ -95,95 +96,20 @@
   }
 }
 
-@media (max-width: 762px) {
-  .title {
-    font-size: 1.4rem;
-  }
-  .content {
-    gap: 0rem
-  }
-}
-
-
-@media (max-width: 700px) {
-  .title {
-    font-size: 1.3rem;
-  }
-}
-
-@media (max-width: 675px) {
-  .title {
-    font-size: 1.2rem;
-  }
-  .container {
-    gap: 0.2rem
-  }
-}
-
-@media (max-width: 620px) {
-  .title {
-    font-size: 1.1rem;
-  }
-  .description {
-    font-size: 0.8rem;
-  }
-  .container {
-    gap: 0rem
-  }
-}
-
-@media (max-width: 586px) {
-  .title {
-    font-size: 1rem;
-    font-weight: 600;
-  }
-  .description {
-    font-size: 0.8rem;
-  }
-  .thumbnail {
-    width: 13rem;
-  }
-  .content {
-    gap: 0rem;
-  }
-  .container {
-    gap: 0rem;
-    height: 13rem;
-  }
-}
-
 @media (max-width: 526px) {
-  .title {
-    font-size: 1rem;
-    font-weight: 600;
-  }
   .description {
-    font-size: 0.8rem;
+    overflow: visible;
   }
   .thumbnail {
     width: 100%;
-    height: 17rem;
+    height: 24rem;
   }
   .container {
     flex-direction: column;
-    height: 28rem;
+    height: 100%;
+    min-height: 43rem;
   }
-}
-
-@media (max-width: 450px) {
-  .title {
-    font-size: 1rem;
-    font-weight: 600;
-  }
-  .description {
-    font-size: 0.8rem;
-  }
-  .thumbnail {
-    width: 100%;
-    height: 14rem;
-  }
-  .container {
-    flex-direction: column;
-    height: 26rem;
+  .content {
+    gap: 0rem;
   }
 }
